# crag

./: .appveyor.yml  .cproject  .editorconfig  .gitignore  .gitmodules  .project  .travis-setup-linux.sh  .travis-setup-osx.sh  .travis.yml  CMakeLists.txt  Makefile  PrecompiledHeader.cmake  README-debian.md  README-linux.md  README-rpi.md  README-windows.md  README.md  bt  build_py_deps.py  core.REMOVED.git-id  crag.cfg  lazer.cpp
linux/: .gitignore  CMakeLists.txt  PrecompiledHeader.cmake  README-pc.md  README-rpi.md  README.md  bt  clean  go  setup  setup.sh
linux/debug/: CMakeLists.txt
linux/release/: CMakeLists.txt
linux/script/: setup_sdl  setup_sdl_image
rpi/debug/: CMakeLists.txt
rpi/release/: CMakeLists.txt
src/: Android.mk  CMakeLists.txt  PrecompiledHeader.cmake  main.cpp  pch.h  readme.html
src/SDLmain/: SDLMain.m
src/applet/: Applet.cpp  Applet.h  AppletBase.cpp  AppletBase.h  AppletInterface.h  AppletInterface_Impl.h  AppletInterface_Poll.h  Condition.h  Engine.cpp  Engine.h  EventCondition.cpp  EventCondition.h  FunctorCondition.h  Future.h  ObserverScript.cpp  ObserverScript.h  PollCondition.h  TestScript.cpp  TestScript.h  TimeCondition.cpp  TimeCondition.h  defs.h
src/core/: ConfigEntry.cpp  ConfigEntry.h  ConfigInit.cpp  ConfigManager.cpp  ConfigManager.h  Enumeration.h  EventWatcher.cpp  EventWatcher.h  GlobalResourceManager.cpp  GlobalResourceManager.h  HashString.h  Ordering.h  Pool.h  Random.cpp  Random.h  Resource.cpp  Resource.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h  Roster.cpp  Roster.h  RosterObjectDeclare.h  RosterObjectDefine.h  Sigmoid.h  Singleton.h  Statistics.cpp  Statistics.h  TextureMapper.cpp  TextureMapper.h  TypeId.cpp  TypeId.h  app.cpp  app.h  array.h  chunk_functor.h  config.h  core.h  counted_object.h  debug.cpp  (+24 more)
src/crag/: main.cpp  pch.h  readme.html
src/distcc/: ncpus.cpp
src/entity/: SpawnEntityFunctions.cpp  SpawnEntityFunctions.h  SpawnPlayer.cpp  SpawnPlayer.h  SpawnSkybox.cpp  SpawnSkybox.h
src/form/: CalculateNodeScoreFunctor.cpp  CalculateNodeScoreFunctor.h  CastRay.cpp  CastRay.h  Engine.cpp  Engine.h  ExpandNodeFunctor.h  ForEachChildNode.h  ForEachFaceInSphere.h  ForEachNodeFace.h  Formation.cpp  Formation.h  FormationManager.cpp  FormationManager.h  GatherExpandableNodesFunctor.h  GenerateMeshFunctor.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  MeshBufferObject.cpp  MeshBufferObject.h  MeshProperties.h  Node.cpp  Node.h  NodeBuffer.cpp  NodeBuffer.h  Object.cpp  Object.h  Point.cpp  Point.h  PointBuffer.cpp  PointBuffer.h  Polyhedron.cpp  Polyhedron.h  Quaterna.h  QuaternaBuffer.cpp  QuaternaBuffer.h  RayCastResult.cpp  RayCastResult.h  (+11 more)
src/ga/: main.cpp  main.h
src/geom/: Distance.h  Intersection.h  Magnitude.h  Matrix.h  Matrix33.h  Matrix44.h  MatrixOps.h  Plane.h  Quaternion.h  Ray.h  Space.h  Sphere.h  Transformation.h  Triangle.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  origin.h  utils.h
src/gfx/: BufferObject.h  Color.h  Cuboid.cpp  Cuboid.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Fence.cpp  Fence.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  GenerateShadowVolumeMesh.h  GeodesicSphere.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  IndexBufferObject.h  IndexedVboResource.h  Layer.cpp  Layer.h  LightType.h  LitVertex.cpp  LitVertex.h  LodParameters.h  Mesh.h  MeshBufferObject.h  MeshResource.h  Messages.h  Model.h  NonIndexedVboResource.h  PlainVertex.cpp  PlainVertex.h  Pov.cpp  Pov.h  (+46 more)
src/glpp/: BufferObject.h  Fence.h  FrameBuffer.h  Ibo.h  Name.h  RenderBuffer.h  Shader.h  Texture.h  Vbo.h  Vbo_Types.h  Vertex.h  debug.h  gl.h  glpp.h
src/ipc/: Daemon.h  EngineBase.h  Fiber.cpp  Fiber.h  FiberAndroid.cpp  FiberAndroid.h  FiberPosix.cpp  FiberPosix.h  FiberWin.cpp  FiberWin.h  Future.h  Handle.h  Handle_Impl.h  Listener.h  ListenerInterface.cpp  ListenerInterface.h  MessageQueue.h  MessageQueue_Impl.h  Object.h  ObjectBase.h  Uid.cpp  Uid.h
src/physics/: Body.cpp  Body.h  BoxBody.cpp  BoxBody.h  ContactInterface.h  CylinderBody.cpp  CylinderBody.h  Engine.cpp  Engine.h  FixedLocation.cpp  FixedLocation.h  GhostBody.cpp  GhostBody.h  IntersectionFunctor.cpp  IntersectionFunctor.h  Location.cpp  Location.h  MeshBody.cpp  MeshBody.h  MeshSurround.cpp  MeshSurround.h  PassiveLocation.cpp  PassiveLocation.h  RayCast.cpp  RayCast.h  SphereBody.cpp  SphereBody.h  SphericalBody.cpp  SphericalBody.h  defs.h
src/script/: Condition.h  Engine.cpp  Engine.h  EntityHandle.cpp  EntityHandle.h  EventCondition.cpp  EventCondition.h  Fiber.cpp  Fiber.h  FiberInterface.h  MainFunctor.cpp  MainFunctor.h  MainScript.cpp  MainScript.h  MetaClass.cpp  MetaClass.h  Object.h  ObserverFunctor.cpp  ObserverFunctor.h  ObserverScript.cpp  ObserverScript.h  Script.cpp  Script.h  ScriptBase.cpp  ScriptBase.h  ScriptThread.cpp  ScriptThread.h  StackCushion.cpp  StackCushion.h  StackFrameBuffer.cpp  StackFrameBuffer.h  TestScript.cpp  TestScript.h  TimeCondition.cpp  TimeCondition.h
src/scripts/: GameScript.cpp  GameScript.h  InitSpace.cpp  InitSpace.h  MainScript.cpp  MainScript.h  MonitorOrigin.cpp  MonitorOrigin.h  ObserverScript.cpp  ObserverScript.h  RegulatorScript.cpp  RegulatorScript.h  SpawnEntityFunctions.cpp  SpawnEntityFunctions.h  TestScript.cpp  TestScript.h
src/sim/: Ball.cpp  Ball.h  Box.cpp  Box.h  CallEntity.h  Controller.cpp  Controller.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityFunctions.cpp  EntityFunctions.h  EntityMessage.h  EntitySet.cpp  EntitySet.h  Firmament.cpp  Firmament.h  FrequencyEstimator.cpp  FrequencyEstimator.h  Model.cpp  Model.h  MoonShader.cpp  MoonShader.h  MouseObserverController.cpp  MouseObserverController.h  Observer.cpp  Observer.h  ObserverController.cpp  ObserverController.h  ObserverInput.cpp  ObserverInput.h  Planet.cpp  Planet.h  PlanetShader.cpp  PlanetShader.h  PlanetaryBody.cpp  PlanetaryBody.h  Simulation.cpp  Simulation.h  (+16 more)
src/smp/: Daemon.h  EngineBase.h  Fiber.cpp  Fiber.h  FiberInterface.h  FiberPosix.cpp  FiberPosix.h  FiberWin.cpp  FiberWin.h  Future.h  Handle.h  Lock.h  (+29 more)
(+736 files in other folders)
